# swiss-river-network-benchmark

./: .gitignore  README.md  pyproject.toml  requirements.txt
playground/: load_data_model.ipynb  optimize_embeddings.ipynb
swissrivernetwork/benchmark/: dataset.py  model.py  ray_evaluation.py  ray_tune.py  test_isolated_station.py  test_single_model.py  train_isolated_station.py  train_single_model.py  training.py  transformer.py  util.py
swissrivernetwork/benchmark/configs/: graphlet.yaml  lstm.yaml  lstm_embedding.yaml  stgnn.yaml  transformer.yaml  transformer_embedding.yaml  transformer_graphlet.yaml  transformer_stgnn.yaml
swissrivernetwork/benchmark/data/: __init__.py
swissrivernetwork/benchmark/jobs/: __init__.py  run_jobs_ray_tune.py
swissrivernetwork/benchmark/nn/: __init__.py  temporal_gat_conv.py  temporal_nn_conv.py
swissrivernetwork/benchmark/outputs/: __init__.py  slim_roformer.ipynb  tester.py  trim_checkpoints.ipynb  trim_checkpoints.py
swissrivernetwork/benchmark/visualize_results/: datasets_overview.ipynb  err_resu_to_latex_table.ipynb  future_steps_resu.ipynb  noises.ipynb  plottools_demo.ipynb  progressbar_demo.ipynb  results_in_polar.ipynb  sankey.ipynb  time_series_generator.ipynb  visual_sinusoidal.ipynb  visual_win_lens.ipynb  window_lens.ipynb  window_lens_resu.ipynb
swissrivernetwork/experiment/: error.py
swissrivernetwork/gbr25/: graph_exporter.py
swissrivernetwork/streamlit/: app.py  pyproject.toml  requirements.txt
swissrivernetwork/util/: os.py  scaler.py
