[project]
name = "swissrivernetwork"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "halo>=0.0.31",
    "ipywidgets>=8.1.7",
    "kaleido>=1.1.0",
    "matplotlib>=3.10.6",
    "notebook>=7.4.5",
    "odfpy>=1.4.1",
    "pandas>=2.3.2",
    "pandas-stubs==2.3.2.250827",
    "plotly>=6.3.0",
    "python-benedict>=0.34.1",
    "ray[tune]>=2.49.1",
    "rich>=14.1.0",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "torch-geometric>=2.6.1",
    "torchinfo>=1.8.0",
    "transformers>=4.56.2",
    "wandb>=0.21.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
